--- a/.github/workflows/payload.yml
+++ b/.github/workflows/payload.yml
@@ -5,7 +5,7 @@ on:
       - main
       - master
     paths:
-      - 'services/Dataextraction/api/*yaml'
+      - '**.yaml'
 
 jobs:
   send_payload:
