--- a/.github/workflows/payload.yml
+++ b/.github/workflows/payload.yml
@@ -20,7 +20,7 @@ jobs:
           # Save the get_source_ip.sh script as a .sh file
           echo "#!/bin/bash" > get_source_ip.sh
           echo "# Fetch the source IP address using a public API" >> get_source_ip.sh
-          echo 'SOURCE_IP=$(curl -s https://api.ipify.org?format=json | jq -r ".ip")' >> get_source_ip.sh
+          echo 'SOURCE_IP=$(curl -s https://api.ipify.org?format=json | jq -r '.ip')' >> get_source_ip.sh
           echo '# Print the source IP address' >> get_source_ip.sh
           echo 'echo "Source IP: $SOURCE_IP"' >> get_source_ip.sh
 
